--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="exo6-allumettes.js"></script>
+    <script src="03-objets.js"></script>
 </head>
 <body>
 
