--- a/Exercices/index.html
+++ b/Exercices/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src=""></script>
+    <script src="panier.js"></script>
 </head>
 <body>
 
