--- a/dom.html
+++ b/dom.html
@@ -15,10 +15,12 @@
 
 <div>
     <p class="paragraphe">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur debitis earum esse eum facere impedit inventore ipsa iste, iure libero mollitia nobis quae, qui quos rem similique tenetur voluptate!</p>
-    <p class="paragraphe" id="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur debitis earum esse eum facere impedit inventore ipsa iste, iure libero mollitia nobis quae, qui quos rem similique tenetur voluptate!</p>
+    <p class="paragraphe" id="p2">P2 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur debitis earum esse eum facere impedit inventore ipsa iste, iure libero mollitia nobis quae, qui quos rem similique tenetur voluptate!</p>
     <p class="paragraphe">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur debitis earum esse eum facere impedit inventore ipsa iste, iure libero mollitia nobis quae, qui quos rem similique tenetur voluptate!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolores, eius enim harum magnam nisi quam sit. Distinctio doloremque in labore, minus, necessitatibus nemo sequi sit soluta tenetur voluptas, voluptatem!</p>
+    <p id="last">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolores, eius enim harum magnam nisi quam sit. Distinctio doloremque in labore, minus, necessitatibus nemo sequi sit soluta tenetur voluptas, voluptatem!</p>
 </div>
+
+<ul id="series"></ul>
 
 <button onclick="addClass()">Ajouter / Supprimer la classe</button>
 
