--- a/06-data.html
+++ b/06-data.html
@@ -20,7 +20,7 @@
 <div data-lang="fr" data-flag="🇫🇷">Français</div>
 <div data-lang="en" data-flag="🇬🇧">Anglais</div>
 <div data-lang="du" data-flag="🇩🇪">Allemand</div>
-<div data-lang="ar" data-flag="🇪🇭">Arabe</div>
+<div data-lang="ar" data-flag="🇲🇦">Arabe</div>
 
 </body>
 </html>
