--- a/Exercices/swapi.html
+++ b/Exercices/swapi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="swapi.js" defer></script>
+  <script src="swapiBis.js" defer></script>
     <style>
         #container {
             display: grid;
@@ -21,9 +21,6 @@
 <body>
 
 <h1>Les Personnages</h1>
-<section id="container">
-
-</section>
-
+<section id="container"></section>
 </body>
 </html>
